Set larger sprite width on mobile view, update sprites. (Fix #3 and fix #4)

--- a/css/sass/_mobile.scss
+++ b/css/sass/_mobile.scss
@@ -46,11 +46,17 @@
     .character {
         text-align: center;
         overflow: visible;
+        padding: 0;
     }
 
     .character .portrait {
-        margin: 0 auto 2em !important;
+        margin: 0 auto 1em !important;
         float: none;
+        width: 70%;
+    }
+
+    .character:not(:last-child) {
+        margin-bottom: 2em;
     }
 
     .character:nth-child(2n) {
