--- a/css/style.css
+++ b/css/style.css
@@ -332,11 +332,16 @@
 
   .character {
     text-align: center;
-    overflow: visible; }
+    overflow: visible;
+    padding: 0; }
 
   .character .portrait {
-    margin: 0 auto 2em !important;
-    float: none; }
+    margin: 0 auto 1em !important;
+    float: none;
+    width: 70%; }
+
+  .character:not(:last-child) {
+    margin-bottom: 2em; }
 
   .character:nth-child(2n) {
     text-align: center; }
